replaced some latex to work around chrome overflow bug

--- a/src/index.css
+++ b/src/index.css
@@ -38,3 +38,10 @@ a:active {
 }
 
 .solution li{margin-bottom:25px}
+
+
+.sol {
+  font-family: "Times New Roman", Times, serif;
+  font-size: 22px;
+}
+
